examples: simplify package.json
Signed-off-by: Joseph Kogut <joseph.kogut@gmail.com>

--- a/examples/package.json
+++ b/examples/package.json
@@ -1,11 +1,8 @@
 {
   "name": "examples",
   "version": "1.0.0",
-  "description": "",
-  "main": "demo.js",
-  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@jakogut/node-qmp": "file:.."
+    "@jakogut/node-qmp": "^0.0.2"
   }
 }
