rename package @jakogut/node-qmp -> node-qmp
Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/examples/package.json
+++ b/examples/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "license": "ISC",
   "dependencies": {
-    "@jakogut/node-qmp": "^0.0.2"
+    "node-qmp": "^0.0.3"
   }
 }
