--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "node-qmp",
   "version": "0.0.2",
+  "description": "Library for interfacing with QEMU using QMP protocol",
+  "author": "Balena.io Ltd <hello@balena.io>",
+  "contributors": [
+    "Joseph Kogut <joseph@balena.io>",
+    "Alex Gonzalez <alexg@balena.io>"
+  ],
   "files": [
     "lib/**/*"
   ],
