--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -1,6 +1,5 @@
 # .github/workflows/flowzone.yml
 name: Flowzone
-
 on:
   pull_request:
     types: [opened, synchronize, closed]
@@ -9,7 +8,6 @@ on:
   pull_request_target:
     types: [opened, synchronize, closed]
     branches: [main, master]
-
 jobs:
   flowzone:
     name: Flowzone
@@ -24,5 +22,4 @@ jobs:
         github.event_name == 'pull_request_target'
       )
     secrets: inherit
-    with:
-      repo_config: true
+    with: {}
